# ruffbox

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  index.html  server.sh
audio/: bd.flac  casio.flac  sn.flac
js/: scheduler.js  setup.js  worklet.js
ruffbox-pattern/: Cargo.toml
ruffbox-pattern/src/: lib.rs  parser.rs  seqgen.rs
ruffbox-sampler/: Cargo.toml
ruffbox-sampler/src/: lib.rs  ruffbox.rs  ruffbox_scheduler.rs
ruffbox-sampler/src/ruffbox/: sampler.rs
ruffbox-sampler/src/ruffbox_scheduler/: ruffbox.rs
ruffbox-scheduler/: Cargo.toml
ruffbox-scheduler/src/: lib.rs
ruffbox-synth/: Cargo.toml  LICENSE
ruffbox-synth-web/: Cargo.toml
ruffbox-synth-web/src/: lib.rs
ruffbox-synth/src/: lib.rs  ruffbox.rs
ruffbox-synth/src/ruffbox/: synth.rs
ruffbox-synth/src/ruffbox/synth/: delay.rs  effects.rs  envelopes.rs  filters.rs  freeverb.rs  oscillators.rs  reverb.rs  routing.rs  sampler.rs  synths.rs
src/: lib.rs  ruffbox.rs
src/ruffbox/: sampler.rs
wasm/: ruffbox.wasm  ruffbox_sampler.wasm  ruffbox_synth.wasm  ruffbox_synth_web.wasm
