[package]
name = "ruffbox-pattern"
version = "2.1.0"
authors = ["Niklas <nik@parkellipsen.de>"]
edition = "2021"
license = "GPL-3.0+"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
js-sys = "0.3"
vom_rs = { git = "https://gitlab.com/ellipsenpark/vom.rs" }
nom = "5.0"
rand = { version = "0.8" }
getrandom = {version = "0.2.7", features=["js"]}
decorum = "0.3"
serde = {version = "1.0", features=["derive"]}

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
