[package]
name = "ruffbox-synth"
version = "0.2.0"
authors = ["nik <nik@parkellipsen.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
num = "0.2.0"
lazy_static = "1.2.0"
wee_alloc = { version = "0.4.2", optional = true }
crossbeam = "0.7.0"
parking_lot = "0.9.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
