[package]
name = "ruffbox_synth"
version = "1.1.1"
authors = ["nik <nik@parkellipsen.de>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
num = "0.3.0"
lazy_static = "1.4.0"
wee_alloc = { version = "0.4.5", optional = true }
crossbeam = "0.7.3"
parking_lot = "0.11.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
